# CLAUDE-BEADS

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  STATE-GUARD-PLAN.md  llms.txt  pyproject.toml
src/beads/: __init__.py  fsm.py  init.py  status.py  sync.py  version_check.py
src/beads/cli/: __init__.py  main.py
src/beads/templates/project_init/.beads/: CHANGELOG.md  PROTOCOL.md  RATIONALE-EXAMPLES.md  README.md  VERIFICATION-TIERS.md  config.yaml
src/beads/templates/project_init/.beads/templates/: bead.md  research-schema.md  spike-bead.md
src/beads/templates/project_init/.beads/templates/examples/: bead-AUTO-example.md  bead-MANUAL-example.md  bead-NONE-example.md
src/beads/templates/project_init/.claude/: settings.json  skills.yaml
src/beads/templates/project_init/.claude/hooks/: error-lock.sh  error-tracker.sh  guard-bash.sh  protect-files.sh  workflow-guard.sh
src/beads/templates/project_init/.claude/rules/: beads-context-rules.md
src/beads/templates/project_init/.claude/skills/: beads-close-phase.md  beads-help.md  beads-onboard.md  beads-plan-phase.md  beads-plan-project.md  beads-plan.md  beads-research.md  beads-resume.md  beads-run.md
src/beads/ui/: dashboard.html  server.py
tests/: __init__.py  test_imports.py
